<resources>
    <string name="app_name">HealthyMB</string>
    <string name="l_menu">Menu</string>

    <string name="l_login">Email</string>
    <string name="l_firstName">Prénom</string>
    <string name="l_lastName">Nom</string>
    <string name="l_password">Mot de passe</string>
    <string name="b_signin">S\'identifier</string>
    <string name="b_checkco">Vérifier votre connection</string>
    <string name="b_signup">S\'enregister</string>
    <string name="creerCompte"><u> Créer un compte</u></string>
    <string name="confirmMdp">Confirmez le mot de passe</string>

    <string name="generalites">Généralités</string>
    <string name="sexe">Sexe:\u0020</string>
    <string name="masculin">Masculin</string>
    <string name="feminin">Feminin</string>
    <string name="taille">Taille:\u0020 </string>
    <string name="poids">Poids:\u0020 </string>
    <string name="age">Age:\u0020 </string>
    <string name="objectifs">Objectifs: </string>
    <string name="perdrePoids">Perdre du poids: </string>
    <string name="physique">Se maintenir physiquement: </string>
    <string name="muscu">Se renforcer musculairement: </string>
    <string name="valider">Valider</string>


    <string name="sexeT">" Masculin"</string>
    <string name="tailleT">"1m82"</string>
    <string name="poidsT">"80kg"</string>
    <string name="ageT">"22 ans"</string>
    <string name="modifier">modifier</string>


    <string name="nomSeance">Long Titre à la Richti</string>
    <string name="dureeSeance">10 min</string>
    <string name="difficulteSeance">3/5</string>
    <string name="dureeSeanceT">Durée :</string>
    <string name="difficulteSeanceT">Difficulté :</string>
    <string name="listeSeance">Liste des séances disponibles</string>
    <string name="nomExo">Pompe</string>
    <string name="nbRepetition">Nombre de répétitions :</string>
    <string name="nbRepetitionValue">40</string>
    <string name="pauseT">Pause : </string>
    <string name="descriptionT">Description : </string>
    <string name="description">blablablablablablablablablablablablablablablablablablablablablablablablablablabla</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_msg">Bienvenue</string>

    <string name="action_settings">Settings</string>

    <string name="d_repas">Repas</string>
    <string name="d_petit_dej">Petit Déjeuner</string>
    <string name="d_dejeuner">Déjeuner</string>
    <string name="d_diner">Dîner</string>
    <string name="d_gouter">Goûter</string>
    <string name="d_title_petit_Dejeuner">Petit Déjeuner</string>
    <string name="d_viennoiserie">Viennoiserie</string>
    <string name="d_fruit">Fruits</string>
    <string name="d_infusion">Infusion</string>
    <string name="title_activity_viennoiserie">Viennoiserie</string>
    <string name="d_choix">Choix</string>
    <string name="d_croissant">Croissant :</string>
    <string name="d_pain_au_chocolat">Pain au chocolat :</string>
    <string name="d_chaussons">Chaussons :</string>
    <string name="d_pain_au_raisins">Pain au raisins :</string>
    <string name="d_brioche">Brioche :</string>
    <string name="d_pain_lait">Pain au lait :</string>
    <string name="d_modifier">Modifier</string>
    <string name="title_activity_dejeuner">Dejeuner</string>
    <string name="title_activity_diner">Diner</string>
    <string name="title_activity_gouter">Gouter</string>
    <string name="title_activity_resume_repas">resumeRepas</string>

</resources>
