<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="efrei.healthymb.Menu"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_title_petit_Dejeuner"
            android:id="@+id/d_title_ptit_Dej"
            android:hint="@string/d_title_petit_Dejeuner"
            android:textSize="40sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|top"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2">
                <ImageButton
                    android:text="@string/d_viennoiserie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:background="@drawable/ic_home_viennoiserie"
                    android:textAlignment="center"
                    android:id="@+id/d_vienoiserie"
                    android:clickable="false"
                    android:onClick="onClick" />

                <ImageButton android:text="@string/d_fruit"
                    android:layout_column="1"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/ic_home_fruit"
                    android:id="@+id/d_fruit"
                    android:backgroundTint="@android:color/black"
                    android:onClick="onClick"
                    />

            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/d_viennoiserie"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
                <TextView
                    android:text="@string/d_fruit"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton android:text="@string/d_diner"
                    android:layout_column="0"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/ic_home_infusion"
                    android:id="@+id/d_infusion"
                    android:backgroundTint="@android:color/black"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:baselineAlignBottom="false" />

                <ImageButton android:text="@string/d_gouter"
                    android:layout_column="1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/ic_home_gouter"
                    android:id="@+id/d_gouter"
                    android:backgroundTint="@android:color/black"
                    android:clickable="false"
                    android:onClick="onClick"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/d_infusion"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
                <TextView
                    android:text="@string/d_gouter"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</ScrollView>
