<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="efrei.healthymb.Menu"
    android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_title_petit_Dejeuner"
            android:id="@+id/d_title_ptit_Dej"
            android:hint="@string/d_title_petit_Dejeuner"
            android:textSize="40sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|top"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageButton
            android:text="@string/d_viennoiserie"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_column="0"
            android:background="@drawable/ic_home_viennoiserie"
            android:textAlignment="center"
            android:id="@+id/d_vienoiserie"
            android:clickable="false"
            android:onClick="onClick" />

        <ImageButton android:text="@string/d_fruit"
            android:layout_column="1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_home_fruit"
            android:id="@+id/d_fruit"
            android:backgroundTint="@android:color/black"
            android:onClick="onClick"
            android:layout_marginLeft="90dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:text="@string/d_viennoiserie"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="60dp" />

        <TextView
                android:text="@string/d_fruit"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            android:layout_marginLeft="30dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageButton android:text="@string/d_diner"
            android:layout_column="0"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_home_infusion"
            android:id="@+id/d_infusion"
            android:backgroundTint="@android:color/black"
            android:clickable="true"
            android:onClick="onClick"
            android:baselineAlignBottom="false" />

        <ImageButton android:text="@string/d_gouter"
                android:layout_column="1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_home_gouter"
                android:id="@+id/d_gouter"
                android:backgroundTint="@android:color/black"
                android:clickable="false"
                android:onClick="onClick"
            android:layout_marginLeft="90dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:text="@string/d_infusion"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
                android:text="@string/d_gouter"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            android:layout_marginLeft="110dp" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp">

            <Button
                android:background="@drawable/valider_button"
                android:id="@+id/d_valider"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:onClick="onClick"
                android:singleLine="true" />

            <Button
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:id="@+id/d_modifier"
                android:layout_marginLeft="5dp"
                android:background="@drawable/modify_button"
                android:onClick="onClick"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <Button
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:id="@+id/d_finish"
                android:onClick="onClick"
                android:background="@drawable/finish_button"
                android:singleLine="true"
                android:layout_marginLeft="100dp" />

        </LinearLayout>

    </LinearLayout>
